# data-science-cookie-cutter-with-package

./: CHECKLIST.md  README.md  cookiecutter.json  pyproject.toml  test_cookiecutter_template.py
.circleci/: config.yml
.github/workflows/: test-cookie-cutter.yml
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md  pyproject-tool-config.toml  pyproject.toml
{{ cookiecutter.project_name }}/.circleci/: config.yml
{{ cookiecutter.project_name }}/.git-dev/: .gitmessage  config
{{ cookiecutter.project_name }}/.git-dev/hooks/: prepare-commit-msg
{{ cookiecutter.project_name }}/.github/workflows/: unit-tests.yml
{{ cookiecutter.project_name }}/.vscode-dev/: settings.json
{{ cookiecutter.project_name }}/scripts/: copy_git_hooks.sh
{{ cookiecutter.project_name }}/tests/: test_{{ cookiecutter.package_name }}.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name ~ '_package'}}/: setup.py
